# Fire_Extinguisher_Robot

./: README.md
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: package.sh  package.xml
install/bringup/share/bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_config.yaml
install/bringup/share/bringup/launch/: bringup.launch.py  nav2_launch.py  slam_launch.py
install/camera_node/lib/camera_node/: camera_node
install/camera_node/share/camera_node/: package.sh  package.xml
install/comm_node/share/comm_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/description/share/description/: package.xml
install/diff_drive_odometry_node/lib/diff_drive_odometry_node/: diff_drive_odometry_node
install/diff_drive_odometry_node/share/diff_drive_odometry_node/: README.md  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diff_drive_odometry_node/share/diff_drive_odometry_node/launch/: diff_drive_odometry.launch.py
install/fire_confidence_node/lib/fire_confidence_node/: fire_confidence_node  fire_confidence_node.py
install/fire_confidence_node/share/fire_confidence_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fire_confidence_node/share/fire_confidence_node/launch/: fire_confidence_node.launch.py
install/firebot_description/share/firebot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/firebot_description/share/firebot_description/cmake/: firebot_descriptionConfig-version.cmake  firebot_descriptionConfig.cmake
install/firebot_description/share/firebot_description/environment/: ament_prefix_path.dsv  path.dsv
install/firebot_description/share/firebot_description/launch/: description.launch.py
install/firebot_description/share/firebot_description/urdf/: camera.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
install/lidar_node/share/lidar_node/: package.dsv  package.ps1  package.sh  package.xml
install/motor_control_node/lib/motor_control/: motor_control_node
install/motor_control_node/share/motor_control_node/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odometry_node/lib/odometry_node/: odometry_publisher
install/odometry_node/share/odometry_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_fusion_node/lib/sensor_fusion_node/: sensor_fusion_node
install/sensor_fusion_node/share/sensor_fusion_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smoke_sensor_node/lib/smoke_sensor_node/: smoke_sensor_node
install/smoke_sensor_node/share/smoke_sensor_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/state_machine_node/lib/state_machine_node/: state_machine_node
install/state_machine_node/share/state_machine_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/suppression_node/lib/suppression_node/: suppression_node
install/suppression_node/share/suppression_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_inference/lib/yolo_inference/: yolo_node
install/yolo_inference/share/yolo_inference/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bringup/: README.md  package.xml  requirements.txt  setup.py
src/bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_config.yaml
src/bringup/launch/: bringup.launch.py  nav2_launch.py  slam_launch.py
src/camera_node/: README.md  package.xml  requirements.txt  setup.py
src/camera_node/camera_node/: camera_node.py
src/camera_node/launch/: camera_node.launch.py
src/comm_node/: package.xml  setup.cfg  setup.py
src/diff_drive_odometry_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/diff_drive_odometry_node/launch/: diff_drive_odometry.launch.py
src/fire_confidence_node/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/fire_confidence_node/fire_confidence_node/: fire_confidence_node.py
src/fire_confidence_node/launch/: fire_confidence_node.launch.py
src/firebot_description/: CMakeLists.txt  README.md  requirements..txt
src/firebot_description/launch/: description.launch.py
src/firebot_description/urdf/: robot.urdf.xacro
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lidar_node/: README.md  package.xml  requirements.txt  setup.py
src/lidar_node/launch/: lidar.launch.py
src/log/: latest_build
src/motor_control_node/: README.md  package.xml  requirements.txt  setup.py
src/motor_control_node/launch/: motor_control.launch.py
src/motor_control_node/motor_control_node/: motor_control_node.py
src/odometry_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/sensor_fusion_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/sensor_fusion_node/launch/: sensor_fusion.launch.py
src/sensor_fusion_node/sensor_fusion_node/: sensor_fusion_node.py
src/smoke_sensor_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/smoke_sensor_node/launch/: smoke_sensor_node.launch.py
src/smoke_sensor_node/smoke_sensor_node/: smoke_sensor_node.py
src/state_machine_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/state_machine_node/launch/: state_machine.launch.py
src/state_machine_node/state_machine_node/: state_machine_node.py
src/suppression_node/: package.xml  setup.cfg  setup.py
src/suppression_node/launch/: suppression_node.launch.py
src/suppression_node/suppression_node/: README.MD  requirements.txt
src/yolo_inference/: READ.md  package.xml  requirements.txt  setup.py
src/yolo_inference/launch/: yolo_node.launch.py
src/yolo_inference/yolo_inference/: yolo_node.py  yolo_node_entry.py
(+18 files in other folders)
