<?xml version="1.0"?>
<package format="3">
  <name>motor_control_node</name>
  <version>0.0.1</version>
  <description>ROS 2 node that receives navigation commands and controls motors via serial communication with Arduino.</description>

  <maintainer email="nathaniel@yourdomain.com">Nathaniel Kangah Miezah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
