<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smoke_sensor_node</name>
  <version>0.1.0</version>
  <description>ROS 2 node that reads analog voltage from an MQ-2 smoke sensor via MCP3008 ADC and publishes smoke level.</description>

  <maintainer email="nathaniel@todo.todo">nathaniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Required for MCP3008 interface -->
  <exec_depend>python3-adafruit-circuitpython-mcp3xxx</exec_depend>
  <exec_depend>python3-adafruit-blinka</exec_depend>

  <!-- Optional test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
